--- a/fineroof/app/template/sass/components/_button.scss
+++ b/fineroof/app/template/sass/components/_button.scss
@@ -316,3 +316,67 @@
 		}
 	}
 }
+
+.slider-big-arrows {
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	border-radius: 9px;
+	background-color: #f1f6f5;
+
+	padding: 30px 60px;
+
+
+	& .slider-control {
+		width: 191px;
+		height: 5px;
+
+		background: #1bc09b;
+
+		cursor: pointer;
+
+		&::before {
+			content: '';
+			width: 21px;
+			height: 21px;
+
+			position: absolute;
+			top: 48%;
+
+
+			border: 5px solid transparent;
+
+		}
+		&.slider-right {
+			&:hover {
+				-webkit-animation: rightToRight 1s 1;
+				animation: rightToRight 1s 1;
+			}
+			&::before {
+				right: 0;
+
+				border-top-color: #1bc09b;
+				border-right-color: #1bc09b;
+
+				transform: translateY(-50%) rotate(45deg);
+			}
+		}
+		&.slider-left {
+			&:hover {
+				-webkit-animation: leftToLeft 1s 1;
+				animation: leftToLeft 1s 1;
+			}
+			&::before {
+				left: 0;
+
+				border-top-color: #1bc09b;
+				border-left-color: #1bc09b;
+
+				transform: translateY(-50%) rotate(-45deg);
+			}
+		}
+	}
+}
