--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -22,6 +22,7 @@
 @import "layout/items-block";
 @import "layout/card-detail";
 @import "layout/distributing-page";
+@import "layout/galery-block";
 
 @import "sections/content";
 @import "sections/navigation";
