--- a/fineroof/app/template/sass/sections/_content.scss
+++ b/fineroof/app/template/sass/sections/_content.scss
@@ -172,6 +172,28 @@
 	        right: 0;
 	      }
 	    }
+		&_catalog-second-page {
+		  &::before {
+			width: 225px;
+			height: 150px;
+
+			background-image: url('../img/inner-title3.png');
+			background-position-y: 0.5px;
+
+			right: 0;
+		  }
+		}
+		&_catalog-galery {
+			&::before {
+				width: 396px;
+				height: 120px;
+
+				background-image: url('../img/gallery-title.png');
+				background-position-y: 0.5px;
+
+				right: 66px;
+			}
+		}
 		&_catalog-page {
 			&::before {
 				width: 412px;
