--- a/fineroof/app/template/sass/base/_general.scss
+++ b/fineroof/app/template/sass/base/_general.scss
@@ -179,6 +179,17 @@ a {
   }
 }
 
+@keyframes topToTop {
+  0%,
+	100% {
+    top: 0px;
+  }
+
+  50% {
+    top: -10px
+  }
+}
+
 
 .popup {
 	display: none;
