--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -23,6 +23,7 @@
 @import "layout/card-detail";
 @import "layout/distributing-page";
 @import "layout/galery-block";
+@import "layout/contacts";
 
 @import "sections/content";
 @import "sections/navigation";
