--- a/fineroof/app/template/sass/sections/_card-item.scss
+++ b/fineroof/app/template/sass/sections/_card-item.scss
@@ -8,6 +8,7 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	flex-grow: 1;
 
 
 	cursor: pointer;
@@ -62,6 +63,7 @@
 		padding: 0px 22px;
 		&_colors {
 			justify-content: center;
+			flex-wrap: wrap;
 
 			padding: 21px 0px 33px;
 			& svg {
@@ -115,6 +117,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		flex-grow: 1;
 
 		margin-bottom: 36px;
 	}
