--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -24,6 +24,7 @@
 @import "layout/distributing-page";
 @import "layout/galery-block";
 @import "layout/contacts";
+@import "layout/popup";
 
 @import "sections/content";
 @import "sections/navigation";
