--- a/fineroof/app/template/css/style.css
+++ b/fineroof/app/template/css/style.css
@@ -271,10 +271,6 @@ a {
   }
 }
 
-.popup {
-  display: none;
-}
-
 .bordered-item {
   border-radius: 10px;
   border-left: 5px solid #1bc09b;
@@ -755,6 +751,82 @@ a {
   bottom: 50%;
   -webkit-transform: translateY(calc(50% + 8px)) translateX(-50%) rotate(135deg);
           transform: translateY(calc(50% + 8px)) translateX(-50%) rotate(135deg);
+}
+
+.text-label {
+  max-width: calc(50% - 7px);
+  width: auto;
+  flex-grow: 1;
+  margin: 3.5px;
+}
+
+.text-input {
+  width: 100%;
+  height: 100%;
+  color: #222222;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 0.38px;
+  border-radius: 6px;
+  border: 2px solid #d7eae5;
+  background-color: #ffffff;
+  padding: 13px 23px;
+}
+
+.text-input::-webkit-input-placeholder {
+  color: #1bc09b;
+  font-size: inherit;
+  font-weight: inherit;
+  letter-spacing: inherit;
+}
+
+.text-input:-moz-placeholder {
+  color: #1bc09b;
+  font-size: inherit;
+  font-weight: inherit;
+  letter-spacing: inherit;
+}
+
+.text-input::-moz-placeholder {
+  color: #1bc09b;
+  font-size: inherit;
+  font-weight: inherit;
+  letter-spacing: inherit;
+}
+
+.text-input:-ms-input-placeholder {
+  color: #1bc09b;
+  font-size: inherit;
+  font-weight: inherit;
+  letter-spacing: inherit;
+}
+
+.text-file {
+  max-width: calc(50% - 7px);
+  flex-grow: 1;
+  margin: 3.5px;
+}
+
+.text-file__span {
+  color: #1bc09b;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 0.38px;
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 6px;
+  border: 2px solid #d7eae5;
+  background-color: #ffffff;
+  padding: 13px 23px;
+  cursor: pointer;
+}
+
+.text-file__span svg {
+  width: 11px;
+  height: 22px;
+  flex-shrink: 0;
 }
 
 .header {
@@ -1730,6 +1802,16 @@ a {
   align-items: center;
   padding-top: 58px;
   padding-bottom: 74px;
+  cursor: pointer;
+}
+
+.actions__item:hover .actions__title span {
+  color: #1bc09b;
+  border-color: transparent;
+}
+
+.actions__item:hover .actions__title span:last-child::before {
+  opacity: 0;
 }
 
 .actions__item:nth-child(1) {
@@ -2608,6 +2690,69 @@ a {
 
 .contacts__wrapper {
   padding-left: 107px;
+}
+
+.popup {
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 11;
+}
+
+.popup__overlay {
+  width: 100%;
+  height: 100%;
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #1bc09b85;
+}
+
+.popup__row {
+  width: 100%;
+  display: -ms-flex;
+  display: flex;
+  align-items: stretch;
+  margin: 0px -3.5px;
+}
+
+.popup__wrap {
+  max-width: 800px;
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
+  background: white;
+  padding: 22px;
+  z-index: 2;
+}
+
+.popup__form {
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 57px 21px;
+}
+
+.popup__title {
+  margin-right: auto;
+}
+
+.popup__cross {
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.popup__cross svg {
+  width: 36px;
+  height: 36px;
 }
 
 .custom-title {
