--- a/fineroof/app/template/sass/components/_input.scss
+++ b/fineroof/app/template/sass/components/_input.scss
@@ -86,3 +86,70 @@
     }
   }
 }
+
+.text {
+	&-label {
+		max-width: calc(50% - 7px);
+		width: auto;
+
+		flex-grow: 1;
+
+		margin:3.5px;
+	}
+	&-input {
+		width: 100%;
+		height: 100%;
+
+		color: #222222;
+		font-size: 15px;
+		font-weight: 700;
+		letter-spacing: 0.38px;
+
+		border-radius: 6px;
+		border: 2px solid #d7eae5;
+		background-color: #ffffff;
+
+		padding: 13px 23px;
+		@include placeholder {
+			color: #1bc09b;
+			font-size: inherit;
+			font-weight: inherit;
+			letter-spacing: inherit;
+		}
+	}
+	&-file {
+		max-width: calc(50% - 7px);
+		flex-grow: 1;
+
+		margin:3.5px;
+		&__span {
+			color: #1bc09b;
+			font-size: 15px;
+			font-weight: 700;
+			letter-spacing: 0.38px;
+
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+
+			border-radius: 6px;
+			border: 2px solid #d7eae5;
+			background-color: #ffffff;
+
+			padding: 13px 23px;
+			cursor: pointer;
+
+			& svg {
+				width: 11px;
+				height: 22px;
+
+				flex-shrink: 0;
+			}
+		}
+		&-input {
+
+		}
+	}
+}
