--- a/fineroof/app/template/sass/layout/_popup.scss
+++ b/fineroof/app/template/sass/layout/_popup.scss
@@ -11,6 +11,11 @@
 	right: 0;
 
 	z-index: 11;
+
+	display: none;
+	&.isShowed {
+		display: block;
+	}
 	&__overlay {
 		width: 100%;
 		height: 100%;
@@ -23,6 +28,11 @@
 
 		background: #1bc09b85;
 	}
+	&__submit {
+		width: 100%;
+
+		margin-top: 58px;
+	}
 	&__row {
 		width: 100%;
 
@@ -33,12 +43,29 @@
 
 		margin: 0px -3.5px;
 	}
+	&__text {
+		max-width: 475px;
+
+		color: #222222;
+		font-size: 17px;
+		font-weight: 400;
+		line-height: 23px;
+		letter-spacing: 0.42px;
+
+		align-self: center;
+
+		margin-bottom: 39px;
+	}
 	&__wrap {
 		max-width: 800px;
+		max-height: 100vh;
+
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
 		flex-direction: column;
+
+		overflow: hidden;
 		background: white;
 
 		padding: 22px;
