--- a/fineroof/app/template/css/style.css
+++ b/fineroof/app/template/css/style.css
@@ -886,6 +886,45 @@ a {
   flex-shrink: 0;
 }
 
+.error {
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #1bc09b85;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  overflow: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.error__message {
+  margin-bottom: 100px;
+}
+
+.error__button {
+  margin: 0 auto;
+}
+
+.error__message {
+  margin-bottom: 100px;
+}
+
+.error__button {
+  margin: 0 auto;
+}
+
 .header {
   padding-bottom: 127px;
 }
