Правки по главной

--- a/fineroof/app/template/css/style.css
+++ b/fineroof/app/template/css/style.css
@@ -369,6 +369,16 @@ a {
           transform: translateX(-50%);
 }
 
+.slider-controls .slider-left:hover {
+  -webkit-animation: leftToLeft ease-in 0.5s 1;
+          animation: leftToLeft ease-in 0.5s 1;
+}
+
+.slider-controls .slider-right:hover {
+  -webkit-animation: rightToRight ease-in 0.5s 1;
+          animation: rightToRight ease-in 0.5s 1;
+}
+
 @media screen and (max-width: 1075px) {
   .slider-controls {
     width: calc(100% - 20px);
@@ -412,6 +422,7 @@ a {
   left: 50% !important;
   -webkit-transform: translateX(-50%) !important;
           transform: translateX(-50%) !important;
+  pointer-events: none;
   padding-top: 35px;
 }
 
@@ -433,6 +444,7 @@ a {
   background: #1bc09b !important;
   flex-shrink: 0;
   margin: 0px 5px;
+  pointer-events: all;
 }
 
 .swiper-pagination-bullet:not(.swiper-pagination-bullet-active) {
@@ -948,6 +960,7 @@ a {
 .header__top {
   background-color: #232323;
   padding: 22px 0px 27px;
+  z-index: 5;
 }
 
 @media screen and (max-width: 610px) {
@@ -997,6 +1010,8 @@ a {
   left: 0;
   top: 0;
   z-index: 2;
+  opacity: 1;
+  transition: .3s;
 }
 
 .header__logo::before {
@@ -1009,6 +1024,10 @@ a {
   border-color: transparent #232323 transparent transparent;
   left: auto;
   right: 0;
+}
+
+.header__logo.isWatching::before, .header__logo.isWatching::after {
+  opacity: 0;
 }
 
 .header__logo object {
@@ -1475,15 +1494,12 @@ a {
   }
 }
 
-.catalog-slider__svg {
+.catalog-slider__pattern {
+  width: 1368px;
+  height: 832px;
   position: absolute;
   right: -50%;
   top: 0;
-}
-
-.catalog-slider__svg object {
-  width: 1364px;
-  height: 1364px;
 }
 
 .index-slider {
@@ -1532,6 +1548,12 @@ a {
   position: absolute;
   left: -171px;
   top: 36px;
+}
+
+@media screen and (max-width: 1655px) {
+  .catalog__svg_worker {
+    left: -373px;
+  }
 }
 
 .catalog__svg_worker object {
@@ -2054,6 +2076,17 @@ a {
   align-items: center;
 }
 
+@media screen and (max-width: 1375px) {
+  .footer__wrap_sb {
+    justify-content: space-between;
+  }
+}
+
+.footer__wrap_margin {
+  margin-bottom: 60px;
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 775px) {
   .footer__wrap {
     font-size: 13px;
@@ -2064,6 +2097,59 @@ a {
   .footer__wrap {
     flex-direction: column;
   }
+}
+
+.footer__list {
+  max-width: 670px;
+  display: -ms-flex;
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__address {
+  display: -ms-flex;
+  display: flex;
+  align-items: flex-start;
+  margin-left: 40px;
+}
+
+.footer__icon {
+  flex-shrink: 0;
+  margin-right: 23px;
+}
+
+.footer__right {
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 1375px) {
+  .footer__right {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.footer__item {
+  width: calc(100% / 4);
+}
+
+.footer__item a {
+  font-size: inherit;
+  color: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.footer__item a:hover {
+  text-decoration: underline;
 }
 
 .footer__social {
@@ -3189,13 +3275,36 @@ a {
   transition: .3s;
 }
 
+.navigation__link:hover::before {
+  width: 237px;
+  height: 237px;
+}
+
+.navigation__link::before {
+  content: '';
+  width: 0;
+  height: 0;
+  background-image: url("../img/nav-hover.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -60%);
+          transform: translate(-50%, -60%);
+  transition: .3s;
+  z-index: -1;
+}
+
 @media screen and (max-width: 775px) {
   .navigation__link {
     font-size: 15px;
   }
 }
 
-.navigation__link:hover {
+.navigation__link.isActive {
   color: #1bc09b;
 }
 
@@ -3895,4 +4004,29 @@ a {
 
 .catalog-list-item__text p:first-child {
   margin-top: 0;
+}
+
+.social__wrap {
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  margin: 0px -5px;
+}
+
+.social__item {
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0px 5px;
+}
+
+.social__item:hover svg {
+  fill: #159377;
+}
+
+.social__item svg {
+  width: 36px;
+  height: 36px;
+  fill: #1bc09b;
 }
