--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -38,3 +38,4 @@
 @import "sections/items-slider";
 @import "sections/get-payment";
 @import "sections/catalog-list-item";
+@import "sections/social";
