--- a/fineroof/app/template/sass/layout/_header.scss
+++ b/fineroof/app/template/sass/layout/_header.scss
@@ -13,7 +13,9 @@
 
 	&__top {
 		background-color: #232323;
+
 		padding: 22px 0px 27px;
+		z-index: 5;
 		@include adaptive (610) {
 	    padding: 9px 0px 6px;
 		}
@@ -58,6 +60,9 @@
 			left: 0;
 			top: 0;
 			z-index: 2;
+			opacity: 1;
+
+			transition: .3s;
 		}
 		&::before {
 			border-width: 14px 25px 0 0;
@@ -69,6 +74,12 @@
 
 			left: auto;
 			right: 0;
+		}
+		&.isWatching {
+			&::before,
+			&::after {
+				opacity: 0;
+			}
 		}
 		& object {
 			width: 50px;
