--- a/fineroof/app/template/sass/layout/_content-block.scss
+++ b/fineroof/app/template/sass/layout/_content-block.scss
@@ -93,10 +93,13 @@
 				height: 683px;
 			}
 			@include adaptive (1750) {
-				margin-left: 50px;
+				margin-left: -20px;
 				margin-bottom: auto;
-				margin-top: -500px;
+				margin-top: -400px;
 				margin-bottom: 220px;
+			}
+			@include adaptive (1075) {
+				display: none;
 			}
 		}
 	}
