--- a/fineroof/app/template/sass/sections/_content.scss
+++ b/fineroof/app/template/sass/sections/_content.scss
@@ -6,7 +6,8 @@
   align-items: flex-start;
   transition: .5s;
 
-  cursor: pointer;
+	cursor: pointer;
+	$parent: &;
   &_center {
     align-items: center;
   }
@@ -21,8 +22,9 @@
           opacity: 0;
         }
       }
-    }
-  }
+		}
+	}
+	
   &_with-border {
     span {
       line-height: 68.01px;
@@ -64,7 +66,15 @@
         background-image: url('../img/house-full.png');
         right: 0;
       }
-    }
+		}
+		&:hover {
+			& span {
+				color: rgb(35, 35, 35);
+			}
+			& span:last-child::before {
+				opacity: 1;
+			}
+		}
   }
   & span {
     color: #232323;
