--- a/fineroof/app/template/css/style.css
+++ b/fineroof/app/template/css/style.css
@@ -2132,6 +2132,7 @@ a {
 .gallery__link {
   margin-top: 38px;
   margin-left: 48px;
+  pointer-events: all;
 }
 
 @media screen and (max-width: 775px) {
