--- a/fineroof/app/template/sass/sections/_navigation.scss
+++ b/fineroof/app/template/sass/sections/_navigation.scss
@@ -76,6 +76,7 @@
   &__additional {
     color: #232323;
     font-size: 12px;
+	line-height: 14px;
     font-weight: 400;
     letter-spacing: 0.3px;
     position: absolute;
