--- a/fineroof/app/template/sass/components/_button.scss
+++ b/fineroof/app/template/sass/components/_button.scss
@@ -6,14 +6,13 @@
 	border-radius: 6px;
 	border: none;
 	background-color: #454647;
-	display: -webkit-flex;
 	display: -ms-flex;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
 	transition: .5s;
-	padding: 13px 60px;
+	padding: 12px 63px 16px;
 	&:hover {
 		background: white;
 		border-radius: 22px;
@@ -53,6 +52,7 @@
 	color: $solidgreen;
 	font-size: 15px;
 	font-weight: 400;
+	line-height: 17px;
 	letter-spacing: 0.38px;
 	@include adaptive (1075) {
 		font-size: 13px;
