--- a/fineroof/app/template/sass/layout/_content-block.scss
+++ b/fineroof/app/template/sass/layout/_content-block.scss
@@ -1,9 +1,6 @@
 .content-block {
-	padding-top: 73px;
+	padding-top: 121px;
 	$parent: &;
-	@include adaptive (1750) {
-		padding-top: 40px;
-	}
 	@include phone {
 		padding-top: 20px;
 	}
@@ -17,6 +14,34 @@
 		& .custom-subtitle::before {
 			left: -44px;
 		}
+	}
+	&__left {
+		width: 311px;
+		height: 371px;
+
+		margin-bottom: auto;
+		margin-top: 21px;
+	}
+	&__svg {
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		align-items: center;
+	}
+	&__center {
+		width: 526px;
+		height: 509px;
+
+		margin-left: -70px;
+	}
+	&__right {
+		width: 230px;
+		height: 100px;
+
+		margin-bottom: auto;
+		margin-top: -50px;
+		margin-left: 210px;
+
 	}
 	&__body {
 		max-width: 917px;
