--- a/fineroof/app/template/sass/layout/_header.scss
+++ b/fineroof/app/template/sass/layout/_header.scss
@@ -14,7 +14,7 @@
 	&__top {
 		background-color: #232323;
 
-		padding: 22px 0px 27px;
+		padding: 23px 0px 24px;
 		z-index: 5;
 
 		@include adaptive (610) {
@@ -28,7 +28,7 @@
 			font-size: 12px;
 			font-weight: 500;
 			letter-spacing: 0.3px;
-			margin-top: 8px;
+			margin-top: 4px;
 			@include adaptive (1075) {
 				font-size: 11px;
 			}
@@ -39,7 +39,7 @@
 		display: -ms-flex;
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: flex-start;
 
 		z-index: 2;
 		@include adaptive (610) {
@@ -88,7 +88,7 @@
 		}
 		& object {
 			width: 50px;
-			height: 39px;
+			height: 48px;
 		}
 	}
 	&__image {
@@ -115,9 +115,11 @@
 	&__feature {
 		color: #222222;
 		font-size: 17px;
+		line-height: 19px;
 		letter-spacing: 0.42px;
-		padding-left: 39px;
-		margin-left: 39px;
+		padding-left: 43px;
+		margin-left: 45px;
+
 		@include adaptive (775) {
 			padding-left: 17px;
 			margin-left: 17px;
@@ -145,6 +147,8 @@
 		display: -ms-flex;
 		display: flex;
 		align-items: center;
+
+		margin-left: 74px;
 		@include adaptive (610) {
 			display: none;
 		}
@@ -215,6 +219,8 @@
 	}
 	&__map {
 		z-index:auto;
+		margin-top: -14px;
+		margin-left: auto;
 		&::before,
 		&::after {
 			content: '';
@@ -265,8 +271,8 @@
 			pointer-events: none;
 
 			margin-bottom: -60px;
-			margin-right: -11px;
-			margin-left: 31px;
+			margin-right: -16px;
+			margin-left: 45px;
 		}
 	}
   &__mobile {
